--- a/Mod/Data/Core/Languages/Russian/Actions.xml
+++ b/Mod/Data/Core/Languages/Russian/Actions.xml
@@ -97,14 +97,14 @@
            value="Restores hitpoints of target allied infantry unit."/>
     <entry name="AstraMilitarum/NightshroudFlavor"
            value="Calling upon the power of the empyrean, the psyker cloaks their allies in a flowing curtain of shadow, concealing them from the enemy."/>
-    <entry name="AstraMilitarum/SeniorOfficerScoutSentinel"
-           value="Senior Officer"/>
-    <entry name="AstraMilitarum/SeniorOfficerScoutSentinelDescription"
-           value="Increases the accuracy of Basilisk and Hydras against adjacent enemy units."/>
     <entry name="AstraMilitarum/SeniorOfficerTempestus"
            value="Senior Officer"/>
     <entry name="AstraMilitarum/SeniorOfficerTempestusDescription"
            value="Increases the accuracy of adjacent allied Guardsmen. Increases the accuracy of Basilisk and Hydras against adjacent enemy units."/>
+    <entry name="AstraMilitarum/SeniorOfficerScoutSentinel"
+           value="Senior Officer"/>
+    <entry name="AstraMilitarum/SeniorOfficerScoutSentinelDescription"
+           value="Increases the accuracy of Basilisk and Hydras against adjacent enemy units."/>
     <entry name="AstraMilitarum/SeniorOfficerBulgryn"
            value="Senior Officer"/>
     <entry name="AstraMilitarum/SeniorOfficerBulgrynDescription"
@@ -295,7 +295,7 @@
     <entry name="Necrons/DefensiveProtocolsDescription"
            value="Increases the armour of the Lord. Increases regeneration of nearby allied Necron infantry units and monstrous creatures."/>
     <entry name="Necrons/DestructionProtocolsDescription"
-           value="Increases the damage taken for adjacent non-hero enemy units."/>
+           value="Increases the accuracy of the Destroyer Lord. Increases the damage taken of an enemy attacked by the Destroyer Lord this turn."/>
     <entry name="Necrons/DynastyDescription"
            value="Increases the influence output of your empire."/>
     <entry name="Necrons/InstallAssaultSystem"
@@ -377,6 +377,10 @@
            value="The Emperor’s own divinity is made manifest from this warrior’s golden halo, blinding the enemy with holy light."/>
     <entry name="SistersOfBattle/CatechismOfRepugnanceDescription"
            value="Decreases the accuracy and the attack range of the target enemy unit."/>
+    <entry name="SistersOfBattle/CatechismOfWrathfulDefiance"
+           value="Catechism Of Wrathful Defiance"/>
+    <entry name="SistersOfBattle/CatechismOfWrathfulDefianceDescription"
+           value="Decreases the attack range of target enemy vehicle."/>
     <entry name="SistersOfBattle/DesperateForRedemption"
            value="Desperate For Redemption"/>
     <entry name="SistersOfBattle/DesperateForRedemptionDescription"
