--- a/Mod/Data/Core/Languages/Russian/Units.xml
+++ b/Mod/Data/Core/Languages/Russian/Units.xml
@@ -3,7 +3,7 @@
     <entry name="SpaceMarines/Captain"
            value="Captain of the Lost"/>
     <entry name="SpaceMarines/ChaplainDescription"
-           value="Zealous hero unit that leads melee combat and inspires loyalty."/>
+           value="Zealous hero unit that augments vehicle units."/>
     <entry name="SpaceMarines/DevastatorCenturionDescription"
            value="Very bulky anti-tank infantry unit."/>
     <entry name="SpaceMarines/HonourGuard"
