--- a/Mod/Data/Core/Languages/Russian/Actions.xml
+++ b/Mod/Data/Core/Languages/Russian/Actions.xml
@@ -487,7 +487,7 @@
     <entry name="SpaceMarines/EvenInDeathIStillServe"
            value="Even In Death I Still Serve"/>
     <entry name="SpaceMarines/EvenInDeathIStillServeDescription"
-           value="Encases target allied infantry unit in the sarcophagus of Dreadnought. The selected unit loses all experience."/>
+           value="Encases target allied Devastator Space Marine, Terminator or a hero in the sarcophagus of Dreadnought."/>
     <entry name="SpaceMarines/EvenInDeathIStillServeFlavor"
            value="A mortally wounded Space Marine may be interred in the sarcophagus of a Dreadnought, allowing him to bring death to his foes in a new form."/>
     <entry name="SpaceMarines/UpgradedLascannon"
@@ -515,7 +515,7 @@
     <entry name="SpaceMarines/WrathOfTheMachineSpirit"
            value="<string name='Traits/SpaceMarines/WrathOfTheMachineSpirit'/>"/>
     <entry name="SpaceMarines/WrathOfTheMachineSpiritDescription"
-           value="Reverses the degradation effect of target allied vehicle."/>
+           value="Reverses the degradation effect of adjacent allied vehicles."/>
     <entry name="SpaceMarines/WrathOfTheMachineSpiritFlavor"
            value="<string name='Traits/SpaceMarines/WrathOfTheMachineSpiritFlavor'/>"/>
     <entry name="SpaceMarines/SiegeManeuversThunderfireCannon"
