--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -914,11 +914,11 @@
     <entry name="SpaceMarines/InfiltrateFlavor"
            value="The weave of this camo cloak emulates the movements of the elements. As a gust of wind passes, as rainfalls across the battlefield, as the haze of heat shimmers the air, the bearers form flickers in and out of perception. If the bearer remains stationary, they are clouded entirely, a ghost lost to the wilds."/>
     <entry name="SpaceMarines/CityTier2Description"
-           value="Increases the tile acquisition radius and the city damage reduction of Fortresses of Redemption."/>
+           value="Increases the tile acquisition radius, and the damage reduction and the hitpoints of Fortresses of Redemption."/>
     <entry name="SpaceMarines/CityTier3Description"
-           value="Increases the tile acquisition radius and the city damage reduction of Fortresses of Redemption."/>
+           value="Increases the tile acquisition radius, and the damage reduction and the hitpoints of Fortresses of Redemption."/>
     <entry name="SpaceMarines/CityTier4Description"
-           value="Increases the tile acquisition radius and gives Thunderfire Cannons and Fortresses of Redemption ability to increase the ranged damage reduction of the target tile. Increases the city damage reduction of Fortresses of Redemption."/>
+           value="Increases the tile acquisition radius and gives Thunderfire Cannons and Fortresses of Redemption ability to increase the ranged damage reduction of the target tile. Increases the damage reduction and the hitpoints of Fortresses of Redemption."/>
     <entry name="SpaceMarines/ChadLascannon"
            value="Improved Lascannon"/>
     <entry name="SpaceMarines/ChadLascannonDescription"
@@ -944,20 +944,26 @@
     <entry name="SpaceMarines/FortressOfRedemptionDamageReduction1"
            value="Stronghold Shielding 1"/>
     <entry name="SpaceMarines/FortressOfRedemptionDamageReduction1Description"
-           value="Increases the city damage reduction."/>
+           value="Increases the damage reduction and the hitpoints."/>
     <entry name="SpaceMarines/FortressOfRedemptionDamageReduction1Flavor"
            value="Gladius Prime is already proving far more hostile than the Adeptus Administratum's worst forecasts. With the Fortress' physical defenses under almost constant assault, the Techmarines approve installation of a void shield. Once constructed, this shimmering dome of power is sufficient to warp away the firepower of entire battalions (or even a rogue Imperial Knight) before collapsing."/>
     <entry name="SpaceMarines/FortressOfRedemptionDamageReduction2"
            value="Stronghold Shielding 2"/>
     <entry name="SpaceMarines/FortressOfRedemptionDamageReduction2Description"
-           value="Increases the city damage reduction."/>
+           value="Increases the damage reduction and the hitpoints."/>
     <entry name="SpaceMarines/FortressOfRedemptionDamageReduction2Flavor"
            value="Gladius Prime is already proving far more hostile than the Adeptus Administratum's worst forecasts. With the Fortress' physical defenses under almost constant assault, the Techmarines approve installation of a void shield. Once constructed, this shimmering dome of power is sufficient to warp away the firepower of entire battalions (or even a rogue Imperial Knight) before collapsing."/>
     <entry name="SpaceMarines/FortressOfRedemptionDamageReduction3"
            value="Stronghold Shielding 3"/>
     <entry name="SpaceMarines/FortressOfRedemptionDamageReduction3Description"
-           value="Increases the city damage reduction."/>
+           value="Increases the damage reduction and the hitpoints."/>
     <entry name="SpaceMarines/FortressOfRedemptionDamageReduction3Flavor"
+           value="Gladius Prime is already proving far more hostile than the Adeptus Administratum's worst forecasts. With the Fortress' physical defenses under almost constant assault, the Techmarines approve installation of a void shield. Once constructed, this shimmering dome of power is sufficient to warp away the firepower of entire battalions (or even a rogue Imperial Knight) before collapsing."/>
+    <entry name="SpaceMarines/FortressOfRedemptionDamageReduction4"
+           value="Stronghold Shielding 4"/>
+    <entry name="SpaceMarines/FortressOfRedemptionDamageReduction4Description"
+           value="Increases the damage reduction and the hitpoints."/>
+    <entry name="SpaceMarines/FortressOfRedemptionDamageReduction4Flavor"
            value="Gladius Prime is already proving far more hostile than the Adeptus Administratum's worst forecasts. With the Fortress' physical defenses under almost constant assault, the Techmarines approve installation of a void shield. Once constructed, this shimmering dome of power is sufficient to warp away the firepower of entire battalions (or even a rogue Imperial Knight) before collapsing."/>
     <entry name="SpaceMarines/FortressOfRedemptionDamageReductionDescription"
            value="Grants Fortresses of Redemption additional Heavy Bolter weapon and armour."/>
