--- a/Mod/Data/Core/Languages/Russian/Traits.xml
+++ b/Mod/Data/Core/Languages/Russian/Traits.xml
@@ -914,11 +914,11 @@
     <entry name="SpaceMarines/InfiltrateFlavor"
            value="The weave of this camo cloak emulates the movements of the elements. As a gust of wind passes, as rainfalls across the battlefield, as the haze of heat shimmers the air, the bearers form flickers in and out of perception. If the bearer remains stationary, they are clouded entirely, a ghost lost to the wilds."/>
     <entry name="SpaceMarines/CityTier2Description"
-           value="Increases the tile acquisition radius and the city damage reduction of Fortresses of Redemption."/>
+           value="Increases the tile acquisition radius, and the damage reduction and the hitpoints of Fortresses of Redemption."/>
     <entry name="SpaceMarines/CityTier3Description"
-           value="Increases the tile acquisition radius and the city damage reduction of Fortresses of Redemption."/>
+           value="Increases the tile acquisition radius, and the damage reduction and the hitpoints of Fortresses of Redemption."/>
     <entry name="SpaceMarines/CityTier4Description"
-           value="Increases the tile acquisition radius and gives Thunderfire Cannons and Fortresses of Redemption ability to increase the ranged damage reduction of the target tile. Increases the city damage reduction of Fortresses of Redemption."/>
+           value="Increases the tile acquisition radius and gives Thunderfire Cannons and Fortresses of Redemption ability to increase the ranged damage reduction of the target tile. Increases the damage reduction and the hitpoints of Fortresses of Redemption."/>
     <entry name="SpaceMarines/ChadLascannon"
            value="Improved Lascannon"/>
     <entry name="SpaceMarines/ChadLascannonDescription"
