--- a/Mod/Data/Core/Languages/Russian/Traits.xml
+++ b/Mod/Data/Core/Languages/Russian/Traits.xml
@@ -940,20 +940,26 @@
     <entry name="SpaceMarines/FortressOfRedemptionDamageReduction1"
            value="Stronghold Shielding 1"/>
     <entry name="SpaceMarines/FortressOfRedemptionDamageReduction1Description"
-           value="Increases the city damage reduction."/>
+           value="Increases the damage reduction and the hitpoints."/>
     <entry name="SpaceMarines/FortressOfRedemptionDamageReduction1Flavor"
            value="Gladius Prime is already proving far more hostile than the Adeptus Administratum's worst forecasts. With the Fortress' physical defenses under almost constant assault, the Techmarines approve installation of a void shield. Once constructed, this shimmering dome of power is sufficient to warp away the firepower of entire battalions (or even a rogue Imperial Knight) before collapsing."/>
     <entry name="SpaceMarines/FortressOfRedemptionDamageReduction2"
            value="Stronghold Shielding 2"/>
     <entry name="SpaceMarines/FortressOfRedemptionDamageReduction2Description"
-           value="Increases the city damage reduction."/>
+           value="Increases the damage reduction and the hitpoints."/>
     <entry name="SpaceMarines/FortressOfRedemptionDamageReduction2Flavor"
            value="Gladius Prime is already proving far more hostile than the Adeptus Administratum's worst forecasts. With the Fortress' physical defenses under almost constant assault, the Techmarines approve installation of a void shield. Once constructed, this shimmering dome of power is sufficient to warp away the firepower of entire battalions (or even a rogue Imperial Knight) before collapsing."/>
     <entry name="SpaceMarines/FortressOfRedemptionDamageReduction3"
            value="Stronghold Shielding 3"/>
     <entry name="SpaceMarines/FortressOfRedemptionDamageReduction3Description"
-           value="Increases the city damage reduction."/>
+           value="Increases the damage reduction and the hitpoints."/>
     <entry name="SpaceMarines/FortressOfRedemptionDamageReduction3Flavor"
+           value="Gladius Prime is already proving far more hostile than the Adeptus Administratum's worst forecasts. With the Fortress' physical defenses under almost constant assault, the Techmarines approve installation of a void shield. Once constructed, this shimmering dome of power is sufficient to warp away the firepower of entire battalions (or even a rogue Imperial Knight) before collapsing."/>
+    <entry name="SpaceMarines/FortressOfRedemptionDamageReduction4"
+           value="Stronghold Shielding 4"/>
+    <entry name="SpaceMarines/FortressOfRedemptionDamageReduction4Description"
+           value="Increases the damage reduction and the hitpoints."/>
+    <entry name="SpaceMarines/FortressOfRedemptionDamageReduction4Flavor"
            value="Gladius Prime is already proving far more hostile than the Adeptus Administratum's worst forecasts. With the Fortress' physical defenses under almost constant assault, the Techmarines approve installation of a void shield. Once constructed, this shimmering dome of power is sufficient to warp away the firepower of entire battalions (or even a rogue Imperial Knight) before collapsing."/>
     <entry name="SpaceMarines/FortressOfRedemptionDamageReductionDescription"
            value="Grants Fortresses of Redemption additional Heavy Bolter weapon and armour."/>
